<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#3b5998"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/bill"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/bill"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights" />

        <EditText
            android:id="@+id/enterBill"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1.19"
            android:inputType="numberDecimal"
            android:background="@drawable/back"
            android:hint="Enter Bill"
            android:gravity="center_vertical|right"
            android:ellipsize="start"
            android:paddingRight="4dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tip"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:gravity="center_vertical"
            android:text="@string/tip"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#fff" />

        <Button
            android:id="@+id/subButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/subButton"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/showTip"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@drawable/back"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/defaultTip" />

        <Button
            android:id="@+id/addButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/addButton"
            android:textColor="#fff" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/people"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:gravity="center_vertical"
            android:text="@string/split"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#fff" />

        <Button
            android:id="@+id/subPeople"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/subButton"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/showPeople"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/back"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/defaultPeople" />

        <Button
            android:id="@+id/addPeople"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/addButton"
            android:textColor="#fff" />
    </LinearLayout>


     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/billPerson"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/billPerPerson"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/showBillPerson"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/back"
            android:layout_margin="3dp"
            android:layout_weight="1.19"
            android:gravity="center_vertical|right"
            android:paddingRight="4dp"
            android:text="@string/defaultBill" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tipPerson"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/tipPerPerson"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/showTipPerson"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/back"
            android:layout_margin="3dp"
            android:layout_weight="1.19"
            android:gravity="center_vertical|right"
            android:paddingRight="4dp"
            android:text="@string/defaultBill" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/totalTip"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/totalTip"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/showTotalTip"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/back"
            android:layout_margin="3dp"
            android:layout_weight="1.19"
            android:gravity="center_vertical|right"
            android:paddingRight="4dp"
            android:text="@string/defaultBill" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/perPerson"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/perPerson"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/showPerPerson"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/back"
            android:layout_margin="3dp"
            android:layout_weight="1.19"
            android:gravity="center_vertical|right"
            android:paddingRight="4dp"
            android:text="@string/defaultBill" />
    </LinearLayout>
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/total"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/total"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/showTotal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/back"
            android:layout_margin="3dp"
            android:layout_weight="1.19"
            android:gravity="center_vertical|right"
            android:paddingRight="4dp"
            android:text="@string/defaultBill" />
    </LinearLayout>
	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1.5"
        android:orientation="horizontal"
        tools:ignore="DisableBaselineAlignment" >
		
        <Button
            android:id="@+id/resetButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/resetButton" 
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:textSize="23sp"
            android:textStyle="bold"
            android:textColor="#fff"/>
        
        <Button
            android:id="@+id/calculateButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/calculateButton" 
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:textSize="23sp"
            android:textStyle="bold"
            android:textColor="#fff"/>

    </LinearLayout>
    

</LinearLayout>